# myr-discovery

./: .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
myr/discovery/: __init__.py
tests/: test_discovery.py
