[metadata]
name = myr.discovery
author = Vnet a.s.
author-email = sap@vnet.sk
summary = Discovery / Annouce remote procedures (tasks), reliably via AMQP, backed by Celery stack.
description-file = README.rst
home-page = https://github.com/Vnet-as/myr-discovery
license = MIT
classifier =
    Development Status :: 2 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    rpc
    amqp
    discovery
    announce
[files]
packages =
    myr
    myr.discovery
namespace_packages =
    myr
